--- a/css/style.css
+++ b/css/style.css
@@ -228,9 +228,8 @@ section {
     padding: 0 1em;
     line-height: 1.5;
     background-color: #0b0e13;
-    max-height: 0;
+    display:none;
     overflow-y: auto;
-    transition: max-height 0.5s ease-in-out;
 }
 
 .panel.active{
